# project2_Polyakova_Polina_M-555

./: .gitignore  README.md  db_meta.json  pyproject.toml
data/: users.json
src/primitive_db/: __init__.py  constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
