[tool.poetry]
name = "project2-polyakova-polina-m-555"
version = "0.1.0"
description = "Примитивная база данных"
authors = ["Polyapolyakov <Inthetrans@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"